--- a/html/content/page.datamodel.html
+++ b/html/content/page.datamodel.html
@@ -1,7 +1,7 @@
 <br>
 <br>
 <table style="width:98%;margin-left:1%;">
-<tr height=40><td colspan=3 align=left><h5>Overview Daigram</h5></td></tr>
+<tr height=40><td colspan=3 align=left><h5>Overview Diagram</h5></td></tr>
 <tr><td align=left>
 Data model represents the logical structure of data integration in GlyGen. It provides the definition, structure and format of the data stored and used in GlyGen database. The data is divided into three main categories: Protein, Proteoform and Glycan. These categories are represented as the main cores in the data model and their integration is described through a collection of predicates over a finite set of predicate variables. This network can be viewed in the overview diagram represented below.
 </td></tr>
