--- a/html/content/page.home.html
+++ b/html/content/page.home.html
@@ -6,7 +6,6 @@
     <textarea id=queryvalue rows=10 style="width:100%;padding:10px;">
     </textarea>
 </div> 
-
 <div style="display:block;float:left;width:100%;text-align:left;border:0px dashed orange;">
     <input type=submit id=searchbtn class=searchbtn value="Submit Query">
 </div>
@@ -14,9 +13,19 @@
 
 <div  style="display:block;float:left;width:100%;text-align:left;border:0px dashed orange;">
 <br><br>
-<h5>Overview Daigram</h5>
+<h5>Overview Diagram</h5>
 
 Data model represents the logical structure of data integration in GlyGen. It provides the definition, structure and format of the data stored and used in GlyGen database. The data is divided into three main categories: Protein, Proteoform and Glycan. These categories are represented as the main cores in the data model and their integration is described through a collection of predicates over a finite set of predicate variables. This network <a href="/webvowl/#glygen">can be viewed using WebVOWL </a> which is web application for the interactive visualization of ontologies.
+</div>
+
+<div style="display:block;float:left;width:100%;text-align:left;border:0px dashed orange;">
+<br><br>
+<h5>Endpoint URI</h5>
+The GlyGen endpoint can also be directly accessed at:
+<ul style="margin:10px 0px 0px 40px;">
+    <li type=circle>graph name: http://sparql.glygen.org</li>
+    <li type=circle>endpoint uri:http://sparql.glygen.org:8880/sparql</li>
+</ul>
 </div>
 
 
@@ -26,6 +35,15 @@ Data model represents the logical structure of data integration in GlyGen. It pr
 Ontology used for RDFization of GlyGen data is available in OWL format.
 <ul style="margin:10px 0px 0px 40px;">
 <li type=circle><a href="/content/glygen.owl" download>Ontology in OWL format</a></li>
+</ul>
+</div>
+
+<div style="display:block;float:left;width:100%;text-align:left;border:0px dashed orange;">
+<br><br>
+<h5>Download Triples</h5>
+All triples in the GlyGen triplestore are available for download in N-Triples format.
+<ul style="margin:10px 0px 0px 40px;">
+    <li type=circle><a href="/ln2triplestoredata/triples.tar.gz" download>triples.tar.gz</a></li>
 </ul>
 </div>
 
