--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,7 @@
 <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123338976-1"></script>
-    <script async src="libraries/ga.js" type="text/javascript"></script>
+    <script async src="/jslib/ga.js" type="text/javascript"></script>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -76,7 +76,7 @@
         <div id=headercn class="row headercn">
             <table width=100% style="border:0px dashed orange;">
                 <tr height=60>
-                    <td width=70% class=moduletitlecn style="border:0px dashed orange;">GlyGen Sparql</td>
+                    <td width=70% class=moduletitlecn style="border:0px dashed orange;">GlyGen SPARQL</td>
                     <td class=moduleversioncn id=moduleversioncn align=right style="padding:0px 10px 0px 0px;"></td>
                 </tr>
             </table>
